# dear_dither

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: deploy.yml
assets/shaders/: passthrough.fs
scripts/: build-desktop.ps1  build-web.ps1  build-web.sh
src/: App.cpp  App.hpp  main.cpp  shell.html
